# 20220721-blog_example

./: .gitignore  LICENSE  mypy.ini  pyproject.toml  readme.md
mysheet/: __main__.py  dependency_graph.py  exceptions.py  input_data.py  sheet.py  start_task.py  task.py  ticks.py  value_task.py
tests/: conftest.py  test_dependency_graph.py  test_sheet.py  test_simulation.py  test_task.py  test_ticks.py
