[tool.poetry]
name = "mysheet"
version = "0.1.0"
description = "An example package of declarative calculation in Python"
authors = ["Yasunori Horikoshi <yasunori.horikoshi@jdsc.ai>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9,<3.10"
click = "^8.1.3"
pytest = "^7.1.2"
networkx = "^2.8"
mdweek = "^1.2.4"
Jinja2 = "^3.1.2"
mypy = "^0.950"
tqdm = "^4.64.0"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
